--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <body>
   <h1>Заголовок</h1>
   <form>
+    <div class="dropdown">
+    <button class="dropbtn">Выберите</button>
+      <div class="dropdown-content">
+         <a href="index.html">Link 1</a>
+         <a href="index1.html">Link 2</a>
+      </div>
+    </div>
     <div class="inputs">
       <label>
         y =
