--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1>Заголовок</h1>
   <form>
-    <div class="dropdown">
+    <div class="dropdown" style="float:left;>
     <button class="dropbtn">Выберите</button>
-      <div class="dropdown-content">
+      <div class="dropdown-content" style="left:0;">
          <a href="index.html">Link 1</a>
          <a href="index1.html">Link 2</a>
       </div>
