--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
 <body>
   <h1>Заголовок</h1>
   <form>
-    <div class="dropdown" style="float:left;>
-    <button class="dropbtn">Выберите</button>
-      <div class="dropdown-content" style="left:0;">
-         <a href="index.html">Link 1</a>
-         <a href="index1.html">Link 2</a>
-      </div>
-    </div>
+  <input type="checkbox" id="tri"/><label for="tri"> <a href="index.html">Тест</a></label>
+  <input type="checkbox" id="tril"/><label for="tril"> <a href="index1.html">Тест</a></label>
     <div class="inputs">
       <label>
         y =
