--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
   </div>
+  <div>
+    <input type="range" id="r1" oninput="axis">
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
 </body>
