--- a/index1.html
+++ b/index1.html
@@ -27,7 +27,7 @@
       </label>
     </div>
     <div class="buttons">
-      <button type="submit">Построить</button>
+      <button type="submit">Построить!</button>
       <button type="button">Прмеры</button>
     </div>
   </form>
