--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <canvas id="polar" width="300" height="300"></canvas>
   </div>
   <div>
-    <input type="range" id="r1" value="8" min="6" max="100" step="2">
+    <input oninput="axis()" type="range" id="r1" value="8" min="6" max="100" step="2">
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
