--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,13 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+  <h1>Заголовок 
+  </h1>
   <form>
+    <ol class="rectangle">
+      <li><a href="index.html">Визуализация явных функций</a></li>
+      <li><a href="index1.html">Визуализация параметрического представления</a></li>
+    </ol>
     <div class="inputs">
       <label>
         x =
