--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </ol>
     <div class="inputs">
        <label>
+        <div class="text-shadow-1"> 
         y =
         <input
           type="text"
@@ -21,6 +22,7 @@
           autocapitalize="none"
           autocorrect="off"
         />
+        </div>
        </label>
     </div>
     <div class="buttons">
