--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <div class="container">
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
-  </div>Ы
+  </div>
+  <div></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
 </body>
