--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-  <h1>Заголовок 
+  <h1>Онлайн-сервис "Визуализация вычислений"
   </h1>
   <form>
     <ol class="rectangle">
@@ -32,7 +32,6 @@
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
   </div>
-  <div></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
 </body>
