--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <div class="container">
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
-  </div>
+    <div class="buttons">
+      <h2>Декардова система координат</h2>
+      <h2>Полярная система координат</h2>
+    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
 </body>
