--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     </div>
     <div class="buttons">
       <button type="submit">Построить</button>
-      <button type="button">Прмеры</button>
+      <button type="button">Примеры</button>
     </div>
   </form>
   <div class="container">
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
     <div class="buttons">
-      <h2>Декардова система координат</h2>
-      <h2>Полярная система координат</h2>
+      <h2 width="300" height="300">Декардова система координат</h2>
+      <h2 width="300" height="300">Полярная система координат</h2>
     </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
