--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <h2 width="200" height="200">Декардова система координат</h2>
       <h2 width="200" height="200">Полярная система координат</h2>
     </div>
+   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index.js"></script>
 </body>
