--- a/index1.html
+++ b/index1.html
@@ -40,6 +40,10 @@
   <div class="container">
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
+    <div class="buttons">
+      <h2 width="200" height="200">Декардова система координат</h2>
+      <h2 width="200" height="200">Полярная система координат</h2>
+    </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
   <script src="index1.js"></script>
