--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
   </form>
   <div class="container">
-    <canvas id="cartesian" width="250" height="250"></canvas>
-    <canvas id="polar" width="250" height="250"></canvas>
+    <canvas id="cartesian"></canvas>
+    <canvas id="polar"></canvas>
     <div class="buttons">
-      <h2 width="200" height="200">Декардова система координат</h2>
-      <h2 width="200" height="200">Полярная система координат</h2>
+      <h2>Декардова система координат</h2>
+      <h2>Полярная система координат</h2>
     </div>
    </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js"></script>
