--- a/index1.html
+++ b/index1.html
@@ -33,8 +33,8 @@
       </label>
     </div>
     <div class="buttons">
-      <button type="submit">Построить!</button>
-      <button type="button">Прмеры</button>
+      <button type="submit">Построить</button>
+      <button type="button">Примеры</button>
     </div>
   </form>
   <div class="container">
