--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <canvas id="cartesian"></canvas>
     <canvas id="polar"></canvas>
     <div class="buttons">
-      <h2>Декардова система координат</h2>
+      <h2>Декартова система координат</h2>
       <h2>Полярная система координат</h2>
     </div>
    </div>
