--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@
     <canvas id="cartesian" width="300" height="300"></canvas>
     <canvas id="polar" width="300" height="300"></canvas>
     <div class="buttons">
-      <h2 width="200" height="200">Декардова система координат</h2>
+      <h2 width="200" height="200">Декартова система координат</h2>
       <h2 width="200" height="200">Полярная система координат</h2>
     </div>
   </div>
