--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-  <h1>Онлайн-сервис "Визуализация вычислений"
+  <h1>Визуализация вычислений
   </h1>
   <form>
     <ol class="rectangle">
