--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>Визуализация вычислений
   </h1>
+  <h2>Явные функции
+  </h2>
   <form>
     <ol class="rectangle">
       <li><a href="index.html">Визуализация явных функций</a></li>
