--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body>
   <h1>Визуализация вычислений
   </h1>
-  <h2>Явные функции
-  </h2>
   <form>
     <ol class="rectangle">
       <li><a href="index.html">Визуализация явных функций</a></li>
       <li><a href="index1.html">Визуализация параметрического представления</a></li>
     </ol>
+  <h2>Явная функция
+  </h2>
     <div class="inputs">
        <label>
         y =
