--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <li><a href="index.html">Визуализация явных функций</a></li>
       <li><a href="index1.html">Визуализация параметрического представления</a></li>
     </ol>
+    <div class="buttons">
+      <h2>Явная функция</h2>
+    </div>
     <div class="inputs">
-        <h2>Явная функция
-        </h2>
        <label>
         y =
         <input
