--- a/index1.html
+++ b/index1.html
@@ -14,6 +14,9 @@
       <li><a href="index.html">Визуализация явных функций</a></li>
       <li><a href="index1.html">Визуализация параметрического представления</a></li>
     </ol>
+    <div class="buttons">
+      <h2>Параметрически заданная функция</h2>
+    </div>
     <div class="inputs">
       <label>
         x =
